--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Joseph-D98/README-Generator#readme",
   "dependencies": {
+    "axios": "^0.20.0",
     "inquirer": "^7.3.3"
   }
 }
